did a lot of work on the animation ree/vimeo page. still trying to figure out how to fix the flex/alignment. this is probably the most annoying thing ive dealt with on this damn page >.<

--- a/animation/style.css
+++ b/animation/style.css
@@ -1,8 +1,400 @@
+* {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+    background-color: #f9f5ff;
+    color: #333333;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    background-color: #f9f5ff;
+    color: #333333;
+    display: flex;
+}
+
 footer {
     font-size: 12px;
     position: fixed;
     bottom: 20px;
     color: #333333;
+}
+
+.navigation {
+    width: 100vw;
+    height: 60px;
+    background-color: #c1aadf;
+    display: flex;
+    position: fixed;
+    z-index: 2;
+}
+
+.color-bar {
+    background-image: linear-gradient(to right, cornflowerblue, #f5f18e, #ffb2c2, #e34a4a, cornflowerblue);
+    width: 100vw;
+    height: 4px;
+    position: fixed;
+    z-index: 3;
+}
+
+.title2 {
+    padding-top: 5px;
+    line-height: 13px;
+}
+
+.title {
+    padding-top: 15px;
+    padding-left: 50px;
+    color: #f5f18e;
+    font-style: italic;
+    font-size: 25px;
+    font-weight: 600;
+}
+
+.sub-title {
+    flex-direction: column;
+    padding: 0px;
+    font-size: 10px;
+    color: white;
+    padding-left: 83px;
+}
+
+.left-nav {
+    font-size: 15px;
+    color: white;
+    padding-left: 50px;
+    padding-top: 23px;
+
+}
+
+.main-nav1 {
+    color: white;
+    padding-left: 15px;
+}
+
+.main-nav1:hover {
+    color: #f5f18e;
+}
+
+.main-nav2 {
+    color: white;
+    padding-left: 15px;
+}
+
+.main-nav2:hover {
+    color: #f5f18e;
+}
+
+.main-nav3 {
+    color: white;
+    padding-left: 15px;
+}
+
+.main-nav3:hover {
+    color: #f5f18e;
+}
+
+.main-nav4 {
+    color: white;
+    padding-left: 15px;
+}
+
+.main-nav4:hover {
+    color: #f5f18e;
+}
+
+.main-nav5 {
+    color: white;
+    padding-left: 15px;
+}
+
+.main-nav5:hover {
+    color: #f5f18e;
+}
+
+.main-nav6 {
+    color: white;
+    padding-left: 15px;
+}
+
+.main-nav6:hover {
+    color: #f5f18e;
+}
+
+.main-nav7 {
+    color: white;
+    padding-left: 15px;
+}
+
+.main-nav7:hover {
+    color: #f5f18e;
+}
+
+.right-nav {
+    font-size: 15px;
+    color: white;
+    padding-left: 50px;
+    padding-top: 10px;
+    right: 20px;
+    position: fixed;
+    flex-direction: row;
+    display: flex;
+}
+
+.smile {
+    font-size: 30px;
+    border-radius: 12px;
+    border: #f5f18e solid 2px;
+    padding: 0px 5px 0px 5px;
+    margin-right: 10px;
+    color: #f5f18e;
+}
+
+.btn-new {
+    /* padding: 5px 8px 5px 8px; */
+    border: none;
+    border-radius: 12px;
+    margin-right: 10px;
+    font-weight: 600;
+    background-color: transparent;
+    border: #f5f18e solid 2px;
+    color: #f5f18e;
+    padding: 10px 5px 10px 5px;
+}
+
+.btn-new:hover {
+    background-color: #f5f18e;
+    border: #f5f18e solid 2px;
+    color: #c1aadf;
+}
+
+.btn-reel {
+    padding: 10px 5px 10px 5px;
+    border: none;
+    border-radius: 12px;
+    font-weight: 600;
+    background-color: transparent;
+    border: #f5f18e solid 2px;
+    color: #f5f18e;
+}
+
+.btn-reel:hover {
+    background-color: #f5f18e;
+    border: #f5f18e solid 2px;
+    color: #c1aadf;
+}
+
+.banner {
+    width: 100vw;
+    height: 320px;
+    background-color: white;
+    object-fit: cover;
+    z-index: 0;
+}
+
+.left {
+    display: flex;
+    flex-direction: column;
+}
+
+.banner,
+.containers {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+#troublesome {
+    display: flex;
+    flex-direction: row;
+}
+.containers {
+    z-index: 0;
+}
+
+.container1 {
+    width: 25vw;
+    height: auto;
+    background-color: #f9f5ff;
+    border-radius: 8px;
+    border: #c1aadf solid 1px;
+
+    display: flex;
+    flex-direction: column;
+    z-index: 1;
+    margin: 250px 0px 0px 85px;
+    padding: 20px;
+
+}
+
+.logo-container {
+    display: grid;
+}
+
+/* .logo {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 8px;
+    margin-left: 10px;
+} */
+
+.m {
+    color: white;
+    text-decoration:line-through;
+    text-decoration-thickness: 10px;
+    text-decoration-color: #f9f5ff;
+    font-size: 150px;
+    color: #f5f18e;
+    font-style: italic;
+}
+
+.name {
+    font-size: 40px;
+}
+
+.location {
+    font-size: 10px;
+    line-height: 20px;
+    padding-left: 5px;
+}
+
+.main-blurb {
+    /* max-width: 300px; */
+    padding-bottom: 50px;
+}
+
+#more {
+    display: none;
+}
+
+#myBtn {
+    background-color: transparent;
+    border: none;
+    color: #c1aadf;
+}
+
+.dark-mode {
+    background-color: black;
+    color: #f9f5ff;
+}
+
+.links1 {
+ padding-bottom: 20px;
+ line-height: 40px;
+ padding-left: 50px;
+ color: #c4bf29;
+}
+
+.other-link {
+    color: #c1aadf;
+}
+
+.other-link:hover {
+    padding-bottom: 20px;
+    line-height: 40px;
+    padding-left: 50px;
+    color: #c4bf29;
+   }
+
+.container2 {
+    width: 25vw;
+    height: 80px;
+    background-color: #f9f5ff;
+    border-radius: 8px;
+    /* border: #c1aadf solid 1px; */
+
+    display: flex;
+    flex-direction: column;
+    margin: 0px 0px 0px 85px;
+    z-index: 1;
+    padding: 10px 0px 20px 20px ;
+}
+
+.buttons1 {
+    display: flex;
+    align-self:center;
+}
+
+#dark-btn {
+    border-radius: 12%;
+    padding: 10px 0px 10px 15px;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    margin-right: 10px;
+    font-weight: 600;
+    font-style: italic;
+    font-size: 33px;
+    background-color: transparent;
+    align-items: center;
+
+    background-color: #c4bf29;
+    border: #c4bf29 solid 1px;
+    color: #f5f18e;
+}
+
+#dark-btn:hover {
+    background-color: #c1aadf;
+    border: #c1aadf solid 1px;
+    color:#f9f5ff;
+}
+
+#contact-btn {
+    border-radius: 12%;
+    padding: 15px;
+    width: 180px;
+    height: 100px;
+    display: flex;
+    font-weight: 600;
+    font-style: italic;
+    font-size: 35px;
+    margin-right: 30px;
+    margin: 0px 10px 0px 10px;
+    align-items: center;
+
+    background-color: #c4bf29;
+    border: #c4bf29 solid 1px;
+    color: #f5f18e;
+}
+
+#contact-btn:hover {
+    background-color: #c1aadf;
+    border: #c1aadf solid 1px;
+    color:#f9f5ff;
+}
+
+.container3 {
+    width: 25vw;
+    background-color: #f9f5ff;
+    border-radius: 8px;
+    border: #c1aadf solid 1px;
+
+    display: flex;
+    flex-direction: column;
+    margin: 10px 0px 80px 85px;
+    z-index: 1;
+    padding: 20px;
+}
+
+.left-list {
+    border-bottom: #c1aadf solid 1px;
+    line-height: 40px;
+}
+
+.right {
+    margin: 250px 0px 0px 85px;
+}
+
+.bottom {
+    width: 100vw;
+    height: 50px;
+    background-color: #c1aadf;
 }
 
 .copyright {
@@ -38,4 +430,12 @@ a:hover {
 
 a:active {
     text-decoration: none;
+}
+
+h1 {
+    color: #333333;
+}
+
+p {
+    color: #333333;
 }
